// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrComment Component should display Customer interaction 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        secondary="Kundeninteraktion und -veränderung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(FormControl)>
        <WithStyles(Select)
          displayEmpty={true}
          id="CUSTOMER_INTERACTION_RatingId"
          name="rating"
          onChange={[Function]}
          value={4}
        >
          <WithStyles(MenuItem)
            id="CUSTOMER_INTERACTION_RatingValue1"
            key="CUSTOMER_INTERACTION_RatingValue1"
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CUSTOMER_INTERACTION_RatingValue2"
            key="CUSTOMER_INTERACTION_RatingValue2"
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CUSTOMER_INTERACTION_RatingValue3"
            key="CUSTOMER_INTERACTION_RatingValue3"
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CUSTOMER_INTERACTION_RatingValue4"
            key="CUSTOMER_INTERACTION_RatingValue4"
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CUSTOMER_INTERACTION_RatingValue5"
            key="CUSTOMER_INTERACTION_RatingValue5"
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrComment-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="CUSTOMER_INTERACTION_CommentId"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="iii"
        />
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="CUSTOMER_INTERACTION"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display ProblemAnalysis 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        secondary="Problemanalyse und -lösung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(FormControl)>
        <WithStyles(Select)
          displayEmpty={true}
          id="PROBLEM_ANALYSIS_RatingId"
          name="rating"
          onChange={[Function]}
          value={2}
        >
          <WithStyles(MenuItem)
            id="PROBLEM_ANALYSIS_RatingValue1"
            key="PROBLEM_ANALYSIS_RatingValue1"
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="PROBLEM_ANALYSIS_RatingValue2"
            key="PROBLEM_ANALYSIS_RatingValue2"
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="PROBLEM_ANALYSIS_RatingValue3"
            key="PROBLEM_ANALYSIS_RatingValue3"
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="PROBLEM_ANALYSIS_RatingValue4"
            key="PROBLEM_ANALYSIS_RatingValue4"
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="PROBLEM_ANALYSIS_RatingValue5"
            key="PROBLEM_ANALYSIS_RatingValue5"
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrComment-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="PROBLEM_ANALYSIS_CommentId"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="ggg"
        />
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="PROBLEM_ANALYSIS"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display Teamwork 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        secondary="Effektives Arbeiten im Team und Teamführung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(FormControl)>
        <WithStyles(Select)
          displayEmpty={true}
          id="TEAMWORK_RatingId"
          name="rating"
          onChange={[Function]}
          value={1}
        >
          <WithStyles(MenuItem)
            id="TEAMWORK_RatingValue1"
            key="TEAMWORK_RatingValue1"
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="TEAMWORK_RatingValue2"
            key="TEAMWORK_RatingValue2"
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="TEAMWORK_RatingValue3"
            key="TEAMWORK_RatingValue3"
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="TEAMWORK_RatingValue4"
            key="TEAMWORK_RatingValue4"
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="TEAMWORK_RatingValue5"
            key="TEAMWORK_RatingValue5"
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrComment-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="TEAMWORK_CommentId"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="fff"
        />
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="TEAMWORK"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrComment Component should display the ContributionToCompanyDevelopment 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        secondary="Beitrag zur Unternehmensentwicklung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    >
      <WithStyles(FormControl)>
        <WithStyles(Select)
          displayEmpty={true}
          id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingId"
          name="rating"
          onChange={[Function]}
          value={3}
        >
          <WithStyles(MenuItem)
            id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue1"
            key="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue1"
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue2"
            key="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue2"
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue3"
            key="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue3"
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue4"
            key="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue4"
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue5"
            key="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_RatingValue5"
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrComment-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentId"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="hhh"
        />
      </WithStyles(ListItem)>
      <WithStyles(PrSwipePositionDescription)
        category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;
